[tool.poetry]
name = "flashfloodpipeline"
version = "0.0.1"
authors = [
  "Aklilu Teklesadik <ateklesadik@redcross.nl>",
  "Phuoc Phùng <pphung@redcross.nl>",
  "Jacopo Margutti <jmargutti@redcross.nl>"
]
description = "IBF Pipeline for flash flood"
readme = "README.md"
repository = "https://github.com/rodekruis/ETH-flash-flood-pipeline"
packages = [{include = "floodpipeline"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
affine="2.4.0"
annotated-types="*" 
anyio="*"
argon2-cffi="*"
argon2-cffi-bindings="*"
arrow="*"
asciitree="0.3.3"
asttokens="*"
async-lru="*"
attrs="*"
azure-core="1.34.0"
azure-cosmos="4.9.0"
azure-identity="1.23.0"
azure-keyvault-secrets="4.10.0"
azure-storage-blob="12.25.0"
babel="*"
beautifulsoup4="*"
bleach="*"
bokeh="*"
Bottleneck="*"
branca="*"
Brotli="*"
cached-property="*"
cachetools="5.4.0"
Cartopy="*"
certifi="*"
cffi="*"
cftime="1.6.4"
charset-normalizer="*"
click="*"
click-plugins="1.1.1"
cligj="0.7.2"
cloudpickle="*"
comm="*"
contourpy="*"
cryptography="46.0.2"
cycler="*"
cytoolz="*"
dask="*"
debugpy="*"
decorator="*"
defusedxml="*"
descartes="*"
distributed="*"
exceptiongroup="*"
executing="*"
fasteners="*"
fastjsonschema="*"
fiona="1.9.6"
folium="*"
fonttools="*"
fqdn="*"
fsspec="*"
geocube="0.6.0"
geopandas="*"
git-filter-repo="2.47.0"
h11="*"
h2="*"
hpack="*"
httpcore="*"
httpx="*"
hydromt="*"
hydromt_sfincs="*"
hyperframe="*"
idna="*"
importlib_metadata="*"
isodate="0.7.2"
isoduration="*"
jedi="*"
Jinja2="*"
joblib="*"
json5="*"
jsonpointer="*"
jsonschema="*"
jsonschema-specifications="*"
kiwisolver="*"
lark="*"
llvmlite="0.45.1"
locket="*"
lz4="*"
mapclassify="*"
MarkupSafe="*"
matplotlib="3.10.6"
matplotlib-inline="*"
mercantile="*"
mistune="*"
msal="1.34.0"
msal-extensions="1.3.1"
msgpack="*"
munkres="1.1.4"
narwhals="*"
nbclient="*"
nbconvert="*"
nbformat="*"
nest_asyncio="*"
netCDF4="1.7.1.post1"
networkx="*"
numba="*"
numba_celltree="*"
numcodecs="*"
numpy="1.26.4"
odc-geo="0.4.8"
overrides="*"
packaging="*"
pandas="*"
pandocfilters="*"
parso="*"
partd="*"
pathlib_abc="*"
pickleshare="*"
pillow="*"
platformdirs="*"
pooch="*"
prometheus_client="*"
prompt_toolkit="*"
psutil="*"
pure_eval="*"
pyarrow="15.0.2"
pycparser="*"
pydantic="*"
pydantic-settings="*"
pydantic_core="*"
pyflwdir="*"
Pygments="*"
PyJWT="2.10.1"
pyogrio="*"
pyparsing="*"
pyproj="*"
pyshp="*"
PySocks="*"
pystac="*"
python-dateutil="*"
python-dotenv="*"
python-json-logger="*"
pytz="*"
PyYAML="*"
pyzmq="*"
rasterio="1.3.10"
rasterstats="0.19.0"
referencing="*"
requests="*"
rfc3339_validator="*"
rfc3986-validator="*"
rfc3987-syntax="*"
rioxarray="0.17.0"
rpds-py="*"
scikit-learn="*"
scipy="1.14.0"
shapely="*"
simplejson="3.19.2"
six="*"
sniffio="*"
snuggs="1.4.7"
sortedcontainers="*"
soupsieve="*"
stack_data="*"
tblib="*"
terminado="*"
threadpoolctl="*"
tinycss2="*"
tomli="*"
tomli_w="*"
toolz="*"
tornado="*"
traitlets="*"
types-python-dateutil="*"
typing-inspection="*"
typing_extensions="*"
typing_utils="*"
tzdata="*"
unicodedata2="*"
universal_pathlib="*"
uri-template="*"
urllib3="*"
wcwidth="*"
webcolors="*"
webencodings="*"
websocket-client="*"
xarray="*"
xmltodict="*"
xugrid="*"
xyzservices="*"
zarr="*"
zict="*"
zipp="*"
zstandard="0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"